c-3: Fixed swagger issues
